# space-grind

./: README.md  package-lock.json  package.json
app/Assets/Animations/: CharacterController.controller  Idle.anim  Run.anim  Talk.anim  Walk.anim
app/Assets/Materials/: Logo.mat
app/Assets/PolygonParticleFX/Materials/: PolygonParticleFX_Rock_02.mat
app/Assets/PolygonParticleFX/Prefabs/: FX_Pickup_Question_01.prefab
app/Assets/PolygonSciFiCity/Materials/: PolygonSciFi_Billboards.mat  PolygonScifi_01_A.mat  PolygonScifi_01_A_TriPlanar.mat  PolygonScifi_02_A.mat  PolygonScifi_03_A.mat  PolygonScifi_04_A.mat  Sign.mat
app/Assets/Prefabs/: GeneralBackground.prefab
app/Assets/Prefabs/UI/: Answer.prefab  BuildingInfo.prefab
app/Assets/QuickOutline/Scripts/: Outline.cs
app/Assets/Scenes/: Interior.unity  Loading.unity  MainArea.unity
app/Assets/Scripts/: SettlementIDLCode.cs
app/Assets/Scripts/Model/: AgentsModel.cs  BuildingsModel.cs  InteractionModel.cs  QuestModel.cs
app/Assets/Scripts/Service/: ConfigService.cs  SettlementService.cs  WalletService.cs
app/Assets/Settings/: URP-Balanced.asset  URP-HighFidelity.asset  URP-Performant-Renderer.asset  URP-Performant.asset
programs/settlement/: Cargo.toml
programs/settlement/src/: config.rs  errors.rs  lib.rs
programs/settlement/src/instructions/: add_building.rs  buy_agent.rs  deposit.rs  fix_buildings.rs  initialise.rs  level_up_buildings.rs  mint_agent.rs  mod.rs  next.rs  reset.rs  withdraw.rs
programs/settlement/src/state/: gamestate.rs  mod.rs
tests/: settlement.ts
(+147 files in other folders)
