[package]
name = "settlement"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]

solana-program = "*" # Will be resolved to the same version as in `anchor-lang`.
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
num-traits = "0.2"
num-derive = "0.3"
